[package]
name = "synth-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types, error handling, and backend trait for the Synth compiler"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
anyhow.workspace = true
wasmparser.workspace = true
# VCR-DBG-001 Tier-1 step 4 (#394, #242) — the DWARF READER (parse the input
# wasm's `.debug_line`) and the EMITTER (write the ARM `.debug_line` bytes) are
# PRODUCTION now, behind the `--debug-line` flag. Bazel's `from_cargo`
# crate_universe auto-resolves this from Cargo.lock (no MODULE.bazel pin needed).
# `read` + `write` are gimli's defaults; named explicitly so the emitter cannot
# silently lose the `write` half.
gimli = { version = "0.33", default-features = false, features = ["read", "write", "std"] }

[dev-dependencies]
wat.workspace = true
