[package]
name = "synth-frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "WASM/WAT parser and module decoder frontend for the Synth compiler"

[dependencies]
# Internal path deps carry an explicit version so `cargo publish`
# can rewrite to the crates.io coordinate. `path` is used for
# in-workspace builds; `version` is what crates.io sees.
synth-core = { path = "../synth-core", version = "0.9.0" }

wasmparser.workspace = true
wasm-encoder.workspace = true
wit-parser.workspace = true
wit-component.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
