[package]
name = "synth-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Portable memory abstraction (Zephyr, Linux, bare-metal) for the Synth compiler"

[dependencies]
bitflags = "2.4"

[features]
default = ["std"]
std = []
# Platform-specific features (one active at a time for no_std)
bare-metal = []
zephyr = []
freertos = []

[dev-dependencies]
