[package]
name = "synth-opt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
synth-cfg = { path = "../synth-cfg" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "optimization_bench"
harness = false
