[package]
name = "synth-synthesis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
synth-core = { path = "../synth-core" }
synth-cfg = { path = "../synth-cfg" }
synth-opt = { path = "../synth-opt" }
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
