[package]
name = "synth-synthesis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "WASM-to-ARM instruction selection and peephole optimizer"

[dependencies]
synth-core = { path = "../synth-core", version = "0.36.0" }
synth-cfg = { path = "../synth-cfg", version = "0.36.0" }
synth-opt = { path = "../synth-opt", version = "0.36.0" }
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
wasmparser.workspace = true

[dev-dependencies]
wat.workspace = true
proptest.workspace = true
