[package]
name = "synth-verify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["z3-solver", "arm"]
z3-solver = ["z3"]
arm = ["synth-synthesis"]

[dependencies]
# Core dependencies (always required)
synth-core = { path = "../synth-core" }
synth-cfg = { path = "../synth-cfg" }
synth-opt = { path = "../synth-opt" }

# ARM synthesis (optional, behind 'arm' feature)
synth-synthesis = { path = "../synth-synthesis", optional = true }

# SMT solver for formal verification
z3 = { version = "0.19", features = ["static-link-z3"], optional = true }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization for test cases
serde.workspace = true
serde_json.workspace = true

# Property-based testing
proptest.workspace = true

# For examples and reporting
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "verification_report"
required-features = ["z3-solver", "arm"]
