[package]
name = "synth-verify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Z3 SMT translation validation for the Synth compiler"

[features]
default = ["z3-solver", "arm"]
z3-solver = ["z3"]
arm = ["synth-synthesis"]

[dependencies]
# Core dependencies (always required)
synth-core = { path = "../synth-core", version = "0.11.0" }
synth-cfg = { path = "../synth-cfg", version = "0.11.0" }
synth-opt = { path = "../synth-opt", version = "0.11.0" }

# ARM synthesis (optional, behind 'arm' feature)
synth-synthesis = { path = "../synth-synthesis", version = "0.11.0", optional = true }

# SMT solver for formal verification
z3 = { version = "0.19", features = ["static-link-z3"], optional = true }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization for test cases
serde.workspace = true
serde_json.workspace = true

# Property-based testing
proptest.workspace = true

# For examples and reporting
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "verification_report"
required-features = ["z3-solver", "arm"]
