[package]
name = "synth-verify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SMT translation validation for the Synth compiler (ordeal QF_BV engine; optional Z3 differential oracle)"

[features]
default = ["arm"]
# Optional Z3 backend: differential oracle against the default ordeal engine
# (enable + set SYNTH_SOLVER_DIFF=1 to cross-check every query). Pulls in
# z3-sys (C++ build) — no longer on the default build path.
z3-solver = ["z3"]
arm = ["synth-synthesis"]

[dependencies]
# Core dependencies (always required)
synth-core = { path = "../synth-core", version = "0.35.0" }
synth-cfg = { path = "../synth-cfg", version = "0.35.0" }
synth-opt = { path = "../synth-opt", version = "0.35.0" }

# ARM synthesis (optional, behind 'arm' feature)
synth-synthesis = { path = "../synth-synthesis", version = "0.35.0", optional = true }

# Default SMT engine: pure-Rust, certificate-checked QF_BV solver (#553)
ordeal = "0.4"

# Z3: optional differential oracle (feature `z3-solver`) — no longer default
z3 = { version = "0.19", features = ["static-link-z3"], optional = true }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization for test cases
serde.workspace = true
serde_json.workspace = true

# Property-based testing
proptest.workspace = true

# For examples and reporting
chrono = "0.4"

[dev-dependencies]
criterion = "0.8"

[[example]]
name = "verification_report"
required-features = ["arm"]
