[package]
name = "synth-wit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WIT (WebAssembly Interface Types) support for the Synth compiler"
# Internal-only: not on the synth-cli published face today.
publish = false

[dependencies]
